--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "index.ts",
   "license": "MIT",
   "scripts": {
-    "dev": "parcel src/index.html"
+    "dev": "parcel src/index.html",
+    "build": "parcel build src/index.html --public-url ./"
   },
   "devDependencies": {
     "babel-plugin-transform-react-jsx": "^6.24.1",
